# risig

./: Cargo.toml
src/: commands.rs  main.rs  risig.rs  translator.rs  utils.rs
src/commands/: balance.rs  captcha.rs  checkup.rs  daily.rs  deposit.rs  donate.rs  gamba.rs  mod.rs  ping.rs  requestmydata.rs  rob.rs  top.rs  withdraw.rs  work.rs
src/commands/fishing/: fish.rs  mod.rs  sell_fish.rs  show_fish.rs
src/structs/: fish.rs  mod.rs
