[package]
name = "risig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
bson = "2.6.0"
rand = "0.8.5"
serde_json = "1.0.96"
serde = "1.0.164"
